<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.ConAddActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="#edf3f5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#106bb9" >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/imageView11"
            android:src="@drawable/conleft" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="机会详情"
            android:id="@+id/textView5"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView12"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_action_discard" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView14"
            android:src="@drawable/ic_action_edit"
            android:layout_toLeftOf="@+id/imageView12"
            android:layout_toStartOf="@+id/imageView12"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#FFFFFF">
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/image_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_boy_chance"
            android:contentDescription="@string/app_name_Chance"
            android:clickable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_Chance"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/chance_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_Chance"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/chance_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_Chance"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/chance_customer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false"
                android:textIsSelectable="false"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_Chance"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/chance_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/principal_Chance"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/chance_principal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_Chance"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/chance_money"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="numberDecimal"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false"
                android:textSize="15sp" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#edf3f5"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount_Chance"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/chance_discount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="numberDecimal"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false"
                android:textIsSelectable="false"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateStart_Chance"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/chance_dateStart"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateEnd_Chance"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/chance_dateEnd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_Chance"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/chance_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ourSigner_Chance"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/chance_ourSigner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cusSigner_Chance"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/chance_cusSigner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark_Chance"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/chance_remark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/grey_900"
                android:textColorHint="@color/grey_300"
                android:focusable="false"
                android:enabled="false"
                android:textSize="15sp" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#edf3f5"
            />

    </LinearLayout>

</ScrollView>
</LinearLayout>